# volocopter

./: .gitignore  README.md  manage.py  pyproject.toml
client/: package-lock.json  package.json
client/src/: App.test.tsx  App.tsx  index.css  setupTests.ts  utils.ts
client/src/assets/: DeleteIcon.tsx  MoveLeftIcon.tsx  MoveRightIcon.tsx
client/src/components/: AddMissionModal.tsx  DeleteMissionModal.tsx  MainPage.tsx
client/src/types/: flight.ts
client/src/utils/: color.ts  filter.ts
flights/: models.py  views.py
flights/migrations/: 0001_initial.py
server/: pyproject.toml  requirements.txt
server/flights/: models.py  serializers.py  tests.py  views.py
server/volocopter/: settings.py  urls.py
volocopter/: asgi.py  settings.py  urls.py  wsgi.py
